welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: ';' expected but 'else' found.
}else{
 ^loneTeen:9: error: Unmatched closing brace '}' ignored here
} 
^loneTeen:10: error: eof expected but '}' found.
 }
 ^